...
    });
  }

  void _updateTabs() {
    final List<Tab> newTabs = [
      const Tab(text: "All"),
      const Tab(text: "Main"),
      if (NounFormsTab.shouldShowTab(_mainControllers.wordTypeController.value))
        const Tab(text: "Forms"),
      if (VerbFormsTab.shouldShowTab(_mainControllers.wordTypeController.value))
        const Tab(text: "Forms"),
      if (VerbPresentTenseTab.shouldShowTab(
        _mainControllers.wordTypeController.value,
      ))
        const Tab(text: "PresentTense"),
      if (VerbPastTenseTab.shouldShowTab(
        _mainControllers.wordTypeController.value,
      ))
        const Tab(text: "PastTense"),
      if (VerbImperativeTab.shouldShowTab(
        _mainControllers.wordTypeController.value,
      ))
        const Tab(text: "Imperative"),
      if (VerbPresentParticipleTab.shouldShowTab(
        _mainControllers.wordTypeController.value,
      ))
        const Tab(text: "PresentParticiple"),

      if (MetaTab.shouldShowTab(_mainControllers.wordTypeController.value))
        const Tab(text: "Meta"),
    ];

    final List<Widget> newTabViews = [
      _tab(_buildAllTab()),
      _tab(_buildMainTab()),
      if (NounFormsTab.shouldShowTab(_mainControllers.wordTypeController.value))
...
      _isLoading = false;
    });
  }

  String getAppBarLabel() {
    if (_isNewWord) return 'Add new word';
    return 'Edit word';
  }

  Widget _tab(Widget child) {
    return Padding(
      padding: ContainerStyles.containerPadding,
      child: SingleChildScrollView(child: child),
...
        ],
      ),
    );
  }

  String getSubmitButtonLabel() {
    if (_isNewWord) return 'Add word';
    return 'Save changes';
  }

  Future<void> _submitChangesAsync() async {
    if (!_formKey.currentState!.validate()) return;
    var wordCreatedNotifier = Provider.of<WordCreatedNotifier>(
      context,
...
