...
        mainAxisAlignment: MainAxisAlignment.spaceBetween,
        crossAxisAlignment: CrossAxisAlignment.center,
        children: [
          MyBottomAppBarItem(
            icon: Icons.add,
            disabledIcon: Icons.add_outlined,
            label: 'Add Word',
            onTap: (() => {Navigator.pushNamed(context, '/wordeditor')}),
          ),
          MyBottomAppBarItem(
            icon: coordinator.isLoading ? Icons.hourglass_top : Icons.school,
            disabledIcon: Icons.school_outlined,
            label: 'Quick Practice',
            isEnabled: !coordinator.isLoading,
            onTap: () => coordinator.startQuickPracticeAsync(context),
          ),
          MyBottomAppBarItem(
            icon: Icons.list,
            disabledIcon: Icons.list_outlined,
            label: 'Collections',
            onTap: (() => {Navigator.pushNamed(context, '/wordcollections')}),
          ),
        ],
      ),
    );
  }
...
